--- a/wp-content/themes/teamlab-blog-2-0/css/common.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/common.css
@@ -525,8 +525,19 @@ body > div.loadingBanner div {
     Desktop
 *************************************************************/
 
+html {
+  min-height: 100%;
+  position: relative;
+  overflow-x: hidden;
+}
+
+body{
+  overflow-x: hidden;
+}
+
 body.desktop .mainpart {
   padding: 0;
+  overflow-x: hidden;
 }
 body.desktop header,
 body.desktop .basement {
