--- a/wp-content/themes/teamlab-blog-2-0/css/pushy.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/pushy.css
@@ -47,6 +47,7 @@
   .pushy-open-left{
     overflow-x: hidden;
     min-height: -webkit-fill-available;
+    min-height: 100vh;
   }
   
   .pushy-open-left .push {
