--- a/wp-content/themes/teamlab-blog-2-0/css/common.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/common.css
@@ -707,6 +707,7 @@ body.desktop .button.red.disabled:visited {
 }
 
   .all-menu-items{
+    position: absolute;
     display: block;
     height: 100%;
   }
