Testing mobile-menu onscrolling

--- a/wp-content/themes/teamlab-blog-2-0/css/pushy.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/pushy.css
@@ -77,6 +77,7 @@
   .pushy-open-right .pushy-content {
     width: 100%;
     visibility: visible;
+    height: calc(100vh - calc(100vh - 100%));
   }
   /* Menu Transitions */
 
