--- a/wp-content/themes/teamlab-blog-2-0/css/pushy.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/pushy.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 1024px) {
   .pushy {
     position: fixed;
-    height: 100%;
+    height: 100vh;
     top: 0;
     z-index: 9999;
     background: #fff;
@@ -9,6 +9,8 @@
     border-right: 1px solid #e5e5e5;
     -webkit-overflow-scrolling: touch;
     width: 429px;
+    min-height: 100vh;
+  min-height: -webkit-fill-available;
     /* enables momentum scrolling in iOS overflow elements */
   
   }
