--- a/wp-content/themes/teamlab-blog-2-0/css/navigation.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/navigation.css
@@ -412,7 +412,7 @@ div.custom-select div.selector {
   padding-bottom: 10px;
 }
 
-#security_header {
+#oforms_header {
   min-width: 180px;
 }
 .menu_pic_div {
@@ -442,8 +442,8 @@ div.custom-select div.selector {
   background-image: url("../images/img_for_header/vegan_in_leipzig_onlyoffice.jpg");
 }
 
-#security_img {
-  background-image: url("../images/img_for_header/menu_security.svg");
+#oforms_img {
+  background-image: url("../images/img_for_header/oforms.svg");
 }
 
 #reseller_img {
@@ -586,7 +586,7 @@ div.custom-select div.selector {
     min-width: 280px;
   }
   #navitem_features_menu .dropdown-content > li:last-of-type {
-    min-width: 272px;
+    max-width: 272px;
   }
   #navitem_partnership_menu .dropdown-content > li:first-of-type,
   #navitem_partnership_menu .dropdown-content > li:last-of-type{
@@ -803,6 +803,9 @@ div.custom-select div.selector {
   #navitem_about_training_courses:before{
     background-position-y: -494px;
   }
+  #navitem_features_security:before{
+    background-position-y: -650px;
+  }
   #navitem_features_docs_editions,
   #navitem_solutions_clients_workspace,
   #navitem_prices_docs,
@@ -827,7 +830,7 @@ div.custom-select div.selector {
   #navitem_prices_workspace:before,
   #navitem_download_docs:before,
   #navitem_download_workspace:before,
-  #navitem_features_security:before,
+  #navitem_features_oforms:before,
   #navitem_integrations_menu a.dropdown-item:before,
   #navitem_prices_menu a.dropdown-item:before,
   #navitem_compare_third_level_menu a.dropdown-item:before,
@@ -850,10 +853,8 @@ div.custom-select div.selector {
   #navitem_partnership_menu .dropdown-content > li:last-of-type{
     background: #f9f9f9;
   }
-  #navitem_features_security {
-    padding: 0 32px;
-  }
-  #navitem_security_third_level_menu a.dropdown-item,
+
+  #navitem_oforms_third_level_menu a.dropdown-item,
   #navitem_integrations_menu a.dropdown-item,
   #navitem_reseller_third_level_menu a.dropdown-item,
   #navitem_compare_third_level_menu a.dropdown-item,
@@ -1222,7 +1223,7 @@ div.custom-select div.selector {
   #customer_stories_div,
   #latest_release_div,
   #reseller_div,
-  #security_div,
+  #oforms_div,
   #for_developers_div,
   #latest_events_div,
   #navitem_about_resources {
@@ -1252,7 +1253,9 @@ div.custom-select div.selector {
   #navitem_download_desktop,
   #navitem_download_products,
   #navitem_partnership_menu a.dropdown-item,
-  #navitem_about_menu a.dropdown-item{
+  #navitem_about_menu a.dropdown-item,
+  #navitem_features_security,
+  #navitem_features_oforms{
     line-height: 21px;
     margin-bottom: 24px;
   }
