Added JA language and translations

--- a/wp-content/themes/teamlab-blog-2-0/css/common.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/common.css
@@ -114,6 +114,11 @@ header {
   height: 100%;
   text-align: left;
 }
+
+.footer_menu.ja{
+  grid-template-columns: 0.8fr 0.75fr 0.75fr 1.07fr;
+  -ms-grid-columns: 0.8fr 32px 0.75fr 32px 0.75fr 32px 1.07fr;
+}
 .footer_menu p {
   font-size: 12px;
   margin: 0 0 5px;
