--- a/wp-content/themes/teamlab-blog-2-0/css/navigation.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/navigation.css
@@ -934,18 +934,18 @@ div.custom-select div.selector {
   
   .advent-announce.push .advent-announce-text:after {
     content: '';
-    background-image: url(../images/top_banner/onlyoffice_7.0/mob_right_1.svg);
-		background-position: center -10px;
-		right: -86px;
-		width: 73px;
+		background-position: 24px 50%,0 8px;
+    background-size: 22px, 127px 33px;
+		right: -115px;
+		width: 127px;
     height: 48px;
   }
   .advent-announce.push .advent-announce-text:before {
     content: '';
-    background-image: url(../images/top_banner/onlyoffice_7.0/mob_left_1.svg);
-    background-position: center 0;
-		left: -72px;
-		width: 72px;
+    background-size: 106px 99px, 127px 33px;
+    background-position: 100% -30px, 0 8px;
+		left: -226px;
+		width: 206px;
     height: 48px;
   }
   .advent-announce.push .advent-announce-text b {
