--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -400,6 +400,9 @@ main{
     max-width: 100%;
     margin: 16px 0;
 }
+.content figure.aligncenter{
+	margin: 16px auto;
+}
 .content p.first-img {
     text-align: center;
 }
